--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
             </exclusions>
         </dependency>
         
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        
 	</dependencies>
 
 	<build>
