switched to env. properties

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,7 @@ target/
 .springBeans
 
 ## ENV ##
-
-src/main/resources/application.properties
+src/main/resources/env.properties
 
 ### IntelliJ IDEA ###
 .idea
