--- a/cm-backend/src/main/resources/application.properties
+++ b/cm-backend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=Competition Manager
 
 server.port=8080
+server.contextPath=/
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
