--- a/cm-app/pom.xml
+++ b/cm-app/pom.xml
@@ -12,11 +12,7 @@
     <packaging>jar</packaging>
     
     <build>
-    <resources>
-      <resource>
-        <directory>dist</directory>
-      </resource>
-    </resources>
+    
     <plugins>
       <plugin>
         <groupId>com.github.eirslett</groupId>
@@ -28,56 +24,37 @@
         </configuration>
         <executions>
           <execution>
-            <id>install node and yarn</id>
+            <id>install node and npm</id>
             <goals>
-              <goal>install-node-and-yarn</goal>
+              <goal>install-node-and-npm</goal>
             </goals>
-            <phase>generate-resources</phase>
           </execution>
           <execution>
-            <id>yarn install</id>
+            <id>npm install</id>
             <goals>
-              <goal>yarn</goal>
+              <goal>npm</goal>
             </goals>
-            <configuration>
-              <arguments>install</arguments>
-            </configuration>
           </execution>
+          
           <execution>
-            <id>yarn lint</id>
+            <id>npm run build</id>
             <goals>
-              <goal>yarn</goal>
+              <goal>npm</goal>
             </goals>
             <configuration>
-              <arguments>lint</arguments>
+              <arguments>run build</arguments>
             </configuration>
           </execution>
-          <execution>
-            <id>yarn build</id>
-            <goals>
-              <goal>yarn</goal>
-            </goals>
-            <phase>generate-resources</phase>
-            <configuration>
-              <arguments>build</arguments>
-            </configuration>
-          </execution>
-          <!--
-          <execution>
-            <id>yarn test</id>
-            <goals>
-              <goal>yarn</goal>
-            </goals>
-            <phase>test</phase>
-            <configuration>
-              <arguments>test ||watch false</arguments>
-              <failOnError>true</failOnError>
-            </configuration>
-          </execution>
-          --> 
+          
         </executions>
       </plugin>
     </plugins>
+    <resources>
+      <resource>
+        <directory>target/client</directory>
+        <targetPath>static</targetPath>
+      </resource>
+    </resources>
   </build>
  
 </project>
