--- a/cm-backend/src/main/resources/application.properties
+++ b/cm-backend/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=Competition Manager
-
 server.port=8080
-#server.contextPath=/rest
-
-spring.mvc.static-path-pattern=
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
+spring.mvc.static-path-pattern=/app/**
+spring.resources.static-locations=classpath:/static/, classpath:/app/
