--- a/cm-backend/pom.xml
+++ b/cm-backend/pom.xml
@@ -2,19 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+   <parent>
+        <groupId>nl.vanbijleveld</groupId>
+        <artifactId>competition-manager</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
+    
     <artifactId>competition-manager-backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
    
     <name>Competition Manager</name>
     <description>Manager for competitions</description>
-
-    <parent>
-        <groupId>nl.vanbijleveld</groupId>
-        <artifactId>competition-manager</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
-
+    
+    
+  <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+    </properties>
   
     <dependencies>
         
@@ -25,17 +31,6 @@
         </dependency>
 
         <!-- Exclude Spring Boot's Default Logging -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-logging</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
