--- a/cm-backend/src/main/resources/env.properties
+++ b/cm-backend/src/main/resources/env.properties
@@ -1,14 +1,12 @@
 
-security.require-ssl=true
-
 iam.master.account.enabled=false
 iam.master.account.password=
 
 #CREDENTIALS
 spring.datasource.url=jdbc:mysql://localhost:3306/competition_manager
-spring.datasource.username=cm-manager
-spring.datasource.password=cm-manager
+spring.datasource.username=root
+spring.datasource.password=
 
 #MYSQL JPA Setting
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=false
