--- a/cm-backend/src/main/resources/env.properties
+++ b/cm-backend/src/main/resources/env.properties
@@ -1,6 +1,6 @@
 
-iam.master.account.enabled=false
-iam.master.account.password=
+iam.master.account.enabled=true
+iam.master.account.password=RootRoot
 
 #CREDENTIALS
 spring.datasource.url=jdbc:mysql://localhost:3306/competition_manager
